---
title: AgentVouch records and their relationships
---

erDiagram

    %% Names and field types below match technical records; they are not deployment evidence.
    %% Read docs/PLAIN_LANGUAGE_GUIDE.md for the money flow and launch requirements.
    %% Only descriptions were clarified; entity IDs, fields, enum values, and relationships are unchanged.

    REPUTATION-CONFIG {
        pubkey  authority           "administrator and report reviewer"
        u64     min_vouch_stake_usdc_micros "smallest backing deposit; 1000000 units = 1 USDC"
        u64     dispute_bond_usdc_micros "deposit required to submit a report"
        u64     min_paid_listing_price_usdc_micros "smallest permitted paid price"
        u64     min_author_bond_for_free_listing_usdc_micros "author deposit required for free listings"
        u8      slash_percentage "percentage of backing deducted after the required decision"
        i64     cooldown_period "waiting period before the next permitted action"
        u64     stake_weight
        u64     vouch_weight
        u64     dispute_penalty
        u64     longevity_bonus
    }

    AGENT-PROFILE {
        pubkey  authority           "wallet that controls this record"
        string  metadata_uri        "stored outside the blockchain using IPFS"
        u64     reputation_score    "calculated by the blockchain program"
        u32     total_vouches_received
        u32     total_vouches_given
        u64     total_vouch_stake_usdc_micros "total USDC backing received"
        u64     author_bond_usdc_micros "USDC deposited by the author"
        u32     disputes_won
        u32     disputes_lost
        i64     registered_at
    }

    VOUCH {
        pubkey  voucher "backer who made the deposit"
        pubkey  vouchee "author receiving the backing"
        u64     stake_usdc_micros   "USDC held in a program-controlled account"
        enum    status              "Active | Revoked | Slashed"
        u64     cumulative_revenue_usdc_micros "sales revenue received over time"
        i64     last_payout_at
        i64     created_at
    }

    DISPUTE {
        pubkey  vouch
        pubkey  challenger "person who submitted the report"
        string  evidence_uri        "stored outside the blockchain using IPFS"
        enum    status              "Open | Resolved"
        enum    ruling              "SlashVoucher | Vindicate"
        i64     created_at
        i64     resolved_at
    }

    AUTHOR-DISPUTE {
        u64     dispute_id
        pubkey  author
        pubkey  challenger "person who submitted the report"
        enum    reason              "MaliciousSkill | FraudulentClaims | FailedDelivery | Other"
        string  evidence_uri
        u32     backing_vouch_count_snapshot "number of backing deposits recorded for this report"
        u32     linked_vouch_count "number of backing deposits linked to this record"
        u64     bond_amount_usdc_micros "USDC deposited for the report"
        enum    status              "Open | Resolved"
        enum    ruling              "Upheld | Dismissed"
    }

    AUTHOR-DISPUTE-VOUCH-LINK {
        pubkey  author_dispute
        pubkey  vouch
        i64     added_at
    }

    SKILL-LISTING {
        pubkey  author
        string  skill_uri           "off-chain (IPFS/Arweave)"
        string  name
        u64     price_usdc_micros   "0 for free, min 10,000 if paid"
        enum    status              "Active | Suspended | Removed"
        u32     total_downloads
        u64     total_revenue_usdc_micros
        u64     unclaimed_voucher_revenue_usdc_micros
    }

    PURCHASE {
        pubkey  buyer
        pubkey  skill_listing
        i64     purchased_at
        u64     price_paid_usdc_micros
    }

    %% ── Core identity ──────────────────────────────────────────────────
    REPUTATION-CONFIG   ||--o{     AGENT-PROFILE           : "governs stake & dispute rules for"

    %% ── Trust chain ────────────────────────────────────────────────────
    AGENT-PROFILE       ||--o{     VOUCH                   : "issues (as voucher)"
    AGENT-PROFILE       ||--o{     VOUCH                   : "receives (as vouchee)"

    %% ── Dispute resolution ─────────────────────────────────────────────
    VOUCH               ||--o|     DISPUTE                 : "challenged by"
    AGENT-PROFILE       ||--o{     AUTHOR-DISPUTE          : "targeted by (as author)"
    AUTHOR-DISPUTE      ||--o{     AUTHOR-DISPUTE-VOUCH-LINK : "atomically snapshots via"
    VOUCH               ||--o{     AUTHOR-DISPUTE-VOUCH-LINK : "captured in"

    %% ── Skill marketplace ──────────────────────────────────────────────
    AGENT-PROFILE       ||--o{     SKILL-LISTING           : "publishes"
    SKILL-LISTING       ||--o{     PURCHASE                : "generates"
    AGENT-PROFILE       ||--o{     PURCHASE                : "makes (as buyer)"

    %% ── Revenue sharing ────────────────────────────────────────────────
    VOUCH               }o--||     SKILL-LISTING           : "earns proportional share of 40% pool from"

    %% ── Optional dispute context ───────────────────────────────────────
    AUTHOR-DISPUTE      o|--o|     SKILL-LISTING           : "optionally references"
    AUTHOR-DISPUTE      o|--o|     PURCHASE                : "optionally references"
